scrapcore_serialization_macro/src/snapshots/scrapcore_serialization_macro__tests__registry_tests@duplicate_types.rs.snap
---
source: scrapcore_serialization_macro/src/tests.rs
expression: check_registry(path)
input_file: scrapcore_serialization_macro/src/test_cases/registry/duplicate_types.rs
---
#[registry(error = "ModelError", no_schema)]
pub enum Model {
    #[model(collection)]
    Test1(A),
    #[model(singleton)]
    Test2(A),
}
::core::compile_error! {
    "This type is already defined in the model"
}
